--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
             <version>2.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.1.214</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
